--- a/css/styleProject.css
+++ b/css/styleProject.css
@@ -86,11 +86,11 @@ div.tab button.active {
     outline: none;
     font-size: 15px;
 }
-.download-img-btn {
+/* .download-img-btn {
     background-color: #0796fe;
     padding: 20px;
     border-radius: 5px;
 }
 .download-img-btn:hover {
     background-color: #ccc;
-}
+} */
